@@ -69,7 +69,7 @@ public class RepairMessageVerbHandler implements IVerbHandler<RepairMessage>
                     for (UUID cfId : prepareMessage.cfIds)
                     {
                         Pair<String, String> kscf = Schema.instance.getCF(cfId);
-                        ColumnFamilyStore columnFamilyStore = Keyspace.open(kscf.left).getColumnFamilyStore(kscf.right);
+                        ColumnFamilyStore columnFamilyStore = Keyspace.openIfExists(kscf.left).getColumnFamilyStore(kscf.right);
                         columnFamilyStores.add(columnFamilyStore);
                     }
                     CassandraVersion peerVersion = SystemKeyspace.getReleaseVersion(message.from);
@@ -88,7 +88,7 @@ public class RepairMessageVerbHandler implements IVerbHandler<RepairMessage>
 
                 case SNAPSHOT:
                     logger.debug("Snapshotting {}", desc);
-                    final ColumnFamilyStore cfs = Keyspace.open(desc.keyspace).getColumnFamilyStore(desc.columnFamily);
+                    final ColumnFamilyStore cfs = Keyspace.openIfExists(desc.keyspace).getColumnFamilyStore(desc.columnFamily);
                     final Range<Token> repairingRange = desc.range;
                     Set<SSTableReader> snapshottedSSSTables = cfs.snapshot(desc.sessionId.toString(), new Predicate<SSTableReader>()
                     {
@@ -120,7 +120,7 @@ public class RepairMessageVerbHandler implements IVerbHandler<RepairMessage>
                     ValidationRequest validationRequest = (ValidationRequest) message.payload;
                     logger.debug("Validating {}", validationRequest);
                     // trigger read-only compaction
-                    ColumnFamilyStore store = Keyspace.open(desc.keyspace).getColumnFamilyStore(desc.columnFamily);
+                    ColumnFamilyStore store = Keyspace.openIfExists(desc.keyspace).getColumnFamilyStore(desc.columnFamily);
 
                     Validator validator = new Validator(desc, message.from, validationRequest.gcBefore);
                     CompactionManager.instance.submitValidation(store, validator);
