@@ -2634,7 +2634,7 @@ public class StorageService extends NotificationBroadcasterSupport implements IE
         {
             ArrayList<Keyspace> t = new ArrayList<>(keyspaceNames.length);
             for (String keyspaceName : keyspaceNames)
-                t.add(getValidKeyspace(keyspaceName));
+                t.add(Keyspace.openIfExists(keyspaceName));
             keyspaces = t;
         }
 
@@ -2670,7 +2670,7 @@ public class StorageService extends NotificationBroadcasterSupport implements IE
         if (tag == null || tag.equals(""))
             throw new IOException("You must supply a snapshot name.");
 
-        Keyspace keyspace = getValidKeyspace(keyspaceName);
+        Keyspace keyspace = Keyspace.openIfExists(keyspaceName);
         ColumnFamilyStore columnFamilyStore = keyspace.getColumnFamilyStore(columnFamilyName);
         if (columnFamilyStore.snapshotExists(tag))
             throw new IOException("Snapshot " + tag + " already exists.");
@@ -2710,7 +2710,7 @@ public class StorageService extends NotificationBroadcasterSupport implements IE
                 if (tag == null || tag.equals(""))
                     throw new IOException("You must supply a snapshot name.");
 
-                Keyspace keyspace = getValidKeyspace(keyspaceName);
+                Keyspace keyspace = Keyspace.openIfExists(keyspaceName);
                 ColumnFamilyStore columnFamilyStore = keyspace.getColumnFamilyStore(columnFamilyName);
                 // As there can be multiple column family from same keyspace check if snapshot exist for that specific
                 // columnfamily and not for whole keyspace
@@ -2740,15 +2740,6 @@ public class StorageService extends NotificationBroadcasterSupport implements IE
                 entry.getKey().snapshot(tag, columnFamily);
         }
 
-    }
-
-    private Keyspace getValidKeyspace(String keyspaceName) throws IOException
-    {
-        if (!Schema.instance.getKeyspaces().contains(keyspaceName))
-        {
-            throw new IOException("Keyspace " + keyspaceName + " does not exist");
-        }
-        return Keyspace.open(keyspaceName);
     }
 
     /**
@@ -2836,8 +2827,7 @@ public class StorageService extends NotificationBroadcasterSupport implements IE
      */
     public Iterable<ColumnFamilyStore> getValidColumnFamilies(boolean allowIndexes, boolean autoAddIndexes, String keyspaceName, String... cfNames) throws IOException
     {
-        Keyspace keyspace = getValidKeyspace(keyspaceName);
-        return keyspace.getValidColumnFamilies(allowIndexes, autoAddIndexes, cfNames);
+        return Keyspace.openIfExists(keyspaceName).getValidColumnFamilies(allowIndexes, autoAddIndexes, cfNames);
     }
 
     /**
